--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
 <body class="container-fluid">
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
-            <a class="navbar-brand" href="#">Inicio</a>
+            <a class="navbar-brand" href="./index.html"><img src="./assets/img/stationerylogocolor.png" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Productos</a>
+                    <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Productos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Nosotros</a>
@@ -39,7 +42,6 @@
         <h2 class="text-center">Todo lo que buscás</h2>
     </header>
     <main>
-        <h3 class="text-center">¡NOVEDADES!</h3>
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
             <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -48,24 +50,24 @@
             </div>
             <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./assets/img/comboPastel.jpg" class="d-block w-100" alt="combo pastel">
+                <img src="./assets/carousel/comboPastel1.jpg" class="d-block w-100" alt="combo pastel">
                 <div class="carousel-caption d-none d-md-block">
                 <h5>Combos pastel</h5>
                 <p>¡Arma tu combo pastel como más te guste!</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
+                <img src="./assets/carousel/escritorio.jpg" class="d-block w-100" alt="escritorio organizado">
                 <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
+                <h5>Organizadores de escritorio</h5>
+                <p>Encontrá todo lo que necesitas para organizar tu espacio</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
+                <img src="./assets/carousel/envios.jpg" class="d-block w-100" alt="envios">
                 <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
+                <h5>Envios a todo el país</h5>
+                <p>Compra desde cualquier parte del país y recibí tu pedido</p>
                 </div>
             </div>
             </div>
@@ -77,6 +79,33 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
             </button>
+        </div>
+        <h3 class="text-center">¡NOVEDADES!</h3>
+        <div class="cards d-flex flex-wrap justify-content-around">
+        <div class="card my-2" style="width: 18rem;">
+            <img src="./assets/img/plannerMensual.jpg" class="card-img-top" alt="plannerMensual">
+            <div class="card-body">
+            <h5 class="card-title">Planificador Mensual</h5>
+            <p class="card-text">Planifica cada mes con este planner tamaño a4 de 24 páginas</p>
+            <a href="#" class="btn btn-primary">+ info</a>
+            </div>
+        </div>
+            <div class="card my-2" style="width: 18rem;">
+                <img src="./assets/img/SetBasicoPastel.jpg" class="card-img-top" alt="SetBasicoPastel">
+                <div class="card-body">
+                <h5 class="card-title">Kit pastel</h5>
+                <p class="card-text">Tus preferidos ahora vienen juntos para que los lleves a todos lados</p>
+                <a href="#" class="btn btn-primary">+ info</a>
+                </div>
+            </div>
+            <div class="card my-2" style="width: 18rem;">
+                <img src="./assets/img/comboUni.jpg" class="card-img-top" alt="combo universitario">
+                <div class="card-body">
+                <h5 class="card-title">Combo "Uni"</h5>
+                <p class="card-text">Combo universitario para tener los apuntes más lindos</p>
+                <a href="#" class="btn btn-primary">+ info</a>
+            </div>
+        </div>
         </div>
     </main>
     <footer></footer>
