--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/bootstrap.min.css">
+    <!--Libreria de iconos-->
+    <script src="https://kit.fontawesome.com/5bb549f7fb.js" crossorigin="anonymous"></script>
 </head>
 <body class="container-fluid">
         <nav class="navbar navbar-expand-lg bg-light">
@@ -108,8 +110,31 @@
         </div>
         </div>
     </main>
-    <footer></footer>
+    <footer class="bg-dark text-white py-4">
+        <div class="container">
+            <nav class="row">
+                <a href="" class="col-3 text-reset text-uppercase d-flex align-items-center text-decoration-none">
+                    <img src="./assets/img/stationerylogocolor.png" alt="logo" class="img-logo mr-2">
+                    Libreria Pastel 
+                </a>
+                <ul class="col-3 list-unstyled">
+                    <li class="d-flex justify-content-between"><a href="#" class="text-reset text-decoration-none" >Productos</a></li>
+                    <li><a href="#" class="text-reset text-decoration-none" >Nosotros</a></li>
+                    <li><a href="#" class="text-reset text-decoration-none" >FAQ</a></li>
+                    <li><a href="#" class="text-reset text-decoration-none" >Contacto</a></li>
+                </ul>
+                <ul class="col-3 list-unstyled">
+                    <li class="font-weight-bold text-uppercase text-decoration-none">Seguinos</li>
+                    <li class="d-flex justify-content-between">
+                        <a href="#" class="text-reset" ><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="#" class="text-reset" ><i class="fa-brands fa-twitter"></i></a>
+                        <a href="#" class="text-reset" ><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#" class="text-reset" ><i class="fa-brands fa-whatsapp"></i></a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+
+    </footer>
     <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-</body>
-</html>
+<script src="http s://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
