--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -14,7 +14,7 @@
 <body class="container-fluid">
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img src="./assets/img/stationerylogocolor.png" alt="logo"></a>
+        <a class="navbar-brand" href="../index.html"><img src="../assets/img/stationerylogocolor.png" alt="logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -24,16 +24,16 @@
                 <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../pages/productos.html">Productos</a>
+                <a class="nav-link" href="./productos.html">Productos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
+                <a class="nav-link" href="./nosotros.html">Nosotros</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../pages/faq.html">Preguntas Frecuentes</a>
+                <a class="nav-link" href="./faq.html">Preguntas Frecuentes</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                <a class="nav-link" href="./contacto.html">Contacto</a>
             </li>
             </ul>
         </div>
@@ -43,5 +43,32 @@
     <h1 class="text-center">Libreria Pastel</h1>
     <h2 class="text-center">Todo lo que buscás</h2>
 </header>
+<footer class="bg-dark text-white py-4">
+    <div class="container">
+        <nav class="row">
+            <a href="" class="col-3 text-reset text-uppercase d-flex align-items-center text-decoration-none">
+                <img src="../assets/img/stationerylogocolor.png" alt="logo" class="img-logo mr-2">
+                Libreria Pastel 
+            </a>
+            <ul class="col-3 list-unstyled">
+                <li class="d-flex justify-content-between"><a href="#" class="text-reset text-decoration-none" >Productos</a></li>
+                <li><a href="#" class="text-reset text-decoration-none" >Nosotros</a></li>
+                <li><a href="#" class="text-reset text-decoration-none" >FAQ</a></li>
+                <li><a href="#" class="text-reset text-decoration-none" >Contacto</a></li>
+            </ul>
+            <ul class="col-3 list-unstyled">
+                <li class="font-weight-bold text-uppercase text-decoration-none">Seguinos</li>
+                <li class="d-flex justify-content-between">
+                    <a href="#" class="text-reset" ><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#" class="text-reset" ><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#" class="text-reset" ><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#" class="text-reset" ><i class="fa-brands fa-whatsapp"></i></a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</footer>
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
