--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="card-body">
             <h5 class="card-title">Planificador Mensual</h5>
             <p class="card-text">Planifica cada mes con este planner tamaño a4 de 24 páginas</p>
-            <a href="#" class="btn btn-primary">+ info</a>
+            <a href="#" class="btn btn-light">+ info</a>
             </div>
         </div>
             <div class="card my-2" style="width: 18rem;">
@@ -97,7 +97,7 @@
                 <div class="card-body">
                 <h5 class="card-title">Kit pastel</h5>
                 <p class="card-text">Tus preferidos ahora vienen juntos para que los lleves a todos lados</p>
-                <a href="#" class="btn btn-primary">+ info</a>
+                <a href="#" class="btn btn-light">+ info</a>
                 </div>
             </div>
             <div class="card my-2" style="width: 18rem;">
@@ -105,12 +105,12 @@
                 <div class="card-body">
                 <h5 class="card-title">Combo "Uni"</h5>
                 <p class="card-text">Combo universitario para tener los apuntes más lindos</p>
-                <a href="#" class="btn btn-primary">+ info</a>
+                <a href="#" class="btn btn-light">+ info</a>
             </div>
         </div>
         </div>
     </main>
-    <footer class="bg-dark text-white py-4">
+    <footer class="bg-secondary bg-gradient text-white py-4">
         <div class="container">
             <nav class="row">
                 <a href="" class="col-3 text-reset text-uppercase d-flex align-items-center text-decoration-none">
