--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,7 +7,7 @@
     <title>Libreria Pastel</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/style.css">
     <!--Libreria de iconos-->
     <script src="https://kit.fontawesome.com/5bb549f7fb.js" crossorigin="anonymous"></script>
 </head>
@@ -43,7 +43,49 @@
     <h1 class="text-center">Libreria Pastel</h1>
     <h2 class="text-center">Todo lo que buscás</h2>
 </header>
-<footer class="bg-dark text-white py-4">
+    <section class="d-flex justify-content-center">
+        <div class="card col-sm-6 p-3">
+            <div class="mb-3">
+                <h4>Envianos tu consulta</h4>
+            </div>
+                <div class="mb-2">
+                    <form id="form1" method="post" action=""></form>
+                        <div class="mb-2">
+                            <label for="nombre">Nombre</label>
+                            <input type="text" class="form-control" name="nombre" id="nombre" placeholder="ej: Juan">
+                    </div>
+                    <div class="mb-2">
+                        <label for="apellido">apellido</label>
+                        <input type="text" class="form-control" name="apellido" id="apellido" placeholder="ej:Perez">
+                    </div>
+                <div class="mb-2">
+                    <label for="correo">Correo Electrónico</label>
+                    <input type="email" class="form-control" name="correo" id="correo"  placeholder="juanperez@example.com">
+                </div>
+                <div class="mb-2">
+                    <label for="ocupacion">Ocupación:</label>
+                    <input type="radio" name="ocupacion" id="docente" value="docente"> Docente
+                    <input type="radio" name="ocupacion" id="estudiante" value="estudiante"> Estudiante
+                    <input type="radio" name="ocupacion" id="otro" value="otro"> Otro
+                </div>
+                <div class="mb-2">
+                    <label for="mensaje">Mensaje:</label>
+                    <textarea name="mensaje" id="mensaje" class="form-control" placeholder="Escribí tu mensaje acá"></textarea>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="suscribirme" id="flexCheckDefault">
+                    <label class="form-check-label" for="flexCheckDefault">
+                    Suscribirme al Newsletter
+                    </label>
+                </div>
+                <div class="mb-2">
+                    <button class="btn btn-secondary">Enviar</button>
+                </div>
+                </form>
+            </div>
+        </div>
+    </section>
+<footer class="bg-secondary bg-gradient text-white py-4">
     <div class="container">
         <nav class="row">
             <a href="" class="col-3 text-reset text-uppercase d-flex align-items-center text-decoration-none">
