agregue pagina nosotros

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -43,7 +43,7 @@
     <h1 class="text-center">Libreria Pastel</h1>
     <h2 class="text-center">Todo lo que buscás</h2>
 </header>
-    <section class="d-flex justify-content-center">
+    <section class="d-flex justify-content-center my-2">
         <div class="card col-sm-6 p-3">
             <div class="mb-3">
                 <h4>Envianos tu consulta</h4>
