--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,12 +1,95 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Libreria Pastel</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="../assets/style.css">
+    <!--Libreria de iconos-->
+    <script src="https://kit.fontawesome.com/5bb549f7fb.js" crossorigin="anonymous"></script>
 </head>
-<body>
-    
+<body class="container-fluid">
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html"><img src="../assets/img/stationerylogocolor.png" alt="logo"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./productos.html">Productos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./faq.html">Preguntas Frecuentes</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./contacto.html">Contacto</a>
+            </li>
+            </ul>
+        </div>
+        </div>
+    </nav>
+<header>
+    <h1 class="text-center">Libreria Pastel</h1>
+    <h2 class="text-center">Todo lo que buscás</h2>
+</header>
+<main>
+    <div class="container nosotros">
+        <div class="row">
+            <div class="col-sm presentacion">
+                <h3 class="text-center">Nuestro mundo pastel</h3>
+                <p>
+                    ¡Hola! ¿Cómo estás? mi nombre es Cande, soy Profesora de Inglés y en el año 2020, durante la pandemia decidí emprender este sueño que se llama LIBRERIA PASTEL. Una pequeña libreria que nació como un showroom en mi casa.
+                </p>
+                <p>
+                    Libreria Pastel, nace de la necesidad del contexto (2020 a.k.a: Cuarentena) de acercarte tus materiales a casa para el trabajo, el colegio, la facultad o para tus hobbies desde la comodidad de tu casa. No solo nos dedicamos a los productos típicos de libreria, si no que, nos encargamos de hacerte llegar productos únicos.
+                </p>
+                <p>
+                    Como docente, me veo expuesta a crear constantemente recursos para complementar el trabajo en clase, siendo una fanática de los colores pastel, el journaling y el arte decidí empezar con este negocio como una forma de acercarles mis productos preferidos, y junto con sus opiniones , consejos y criticas constructivas decidi ir más allá y agrandar la libreria.
+                    Junto con mi pareja, Martin, llevamos a cabo este proyecto que gracias a vos, todos los días crece un poquito más.
+                </p>
+            </div>
+            <div>
+                <img src="../assets/img/FotoNosotros.jpg" class="img-fluid" alt="Equipo de trabajo">
+            </div>
+        </div>
+    </div>
+<footer class="bg-secondary bg-gradient text-white py-4">
+    <div class="container">
+        <nav class="row">
+            <a href="" class="col-3 text-reset text-uppercase d-flex align-items-center text-decoration-none">
+                <img src="../assets/img/stationerylogocolor.png" alt="logo" class="img-logo mr-2">
+                Libreria Pastel 
+            </a>
+            <ul class="col-3 list-unstyled">
+                <li class="d-flex justify-content-between"><a href="#" class="text-reset text-decoration-none" >Productos</a></li>
+                <li><a href="#" class="text-reset text-decoration-none" >Nosotros</a></li>
+                <li><a href="#" class="text-reset text-decoration-none" >FAQ</a></li>
+                <li><a href="#" class="text-reset text-decoration-none" >Contacto</a></li>
+            </ul>
+            <ul class="col-3 list-unstyled">
+                <li class="font-weight-bold text-uppercase text-decoration-none">Seguinos</li>
+                <li class="d-flex justify-content-between">
+                    <a href="#" class="text-reset" ><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#" class="text-reset" ><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#" class="text-reset" ><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#" class="text-reset" ><i class="fa-brands fa-whatsapp"></i></a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</footer>
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
