--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -64,6 +64,7 @@
             </div>
         </div>
     </div>
+</main>
 <footer class="bg-secondary bg-gradient text-white py-4">
     <div class="container">
         <nav class="row">
