--- a/pages/productos.html
+++ b/pages/productos.html
@@ -96,29 +96,30 @@
             </div>
         </div>
     </main>
-    <footer class="bg-secondary bg-gradient text-white py-4">
-        <div class="container">
-            <nav class="row">
-                <a href="" class="col-3 text-reset text-uppercase d-flex align-items-center text-decoration-none">
-                    <img src="../assets/img/stationerylogocolor.png" alt="logo" class="img-logo mr-2">
-                    Libreria Pastel 
-                </a>
-                <ul class="col-3 list-unstyled">
-                    <li class="d-flex justify-content-between"><a href="#" class="text-reset text-decoration-none" >Productos</a></li>
-                    <li><a href="#" class="text-reset text-decoration-none" >Nosotros</a></li>
-                    <li><a href="#" class="text-reset text-decoration-none" >FAQ</a></li>
-                    <li><a href="#" class="text-reset text-decoration-none" >Contacto</a></li>
-                </ul>
-                <ul class="col-3 list-unstyled">
-                    <li class="font-weight-bold text-uppercase text-decoration-none">Seguinos</li>
-                    <li class="d-flex justify-content-between">
-                        <a href="#" class="text-reset" ><i class="fa-brands fa-facebook-f"></i></a>
-                        <a href="#" class="text-reset" ><i class="fa-brands fa-twitter"></i></a>
-                        <a href="#" class="text-reset" ><i class="fa-brands fa-instagram"></i></a>
-                        <a href="#" class="text-reset" ><i class="fa-brands fa-whatsapp"></i></a>
-                    </li>
-                </ul>
-            </nav>
+    <footer class="text-center text-lg-start text-white bg-secondary bg-gradient">
+        <div class="container d-flex justify-content-center py-5">
+            <a href="" class="col-3 text-reset text-uppercase d-flex align-items-center text-decoration-none">
+                <img src="../assets/img/stationerylogocolor.png" href="../index.html" alt="logo" class="img-logo mr-2">
+                Libreria Pastel 
+            </a>
+            <ul class="col-3 list-unstyled">
+                <li class="d-flex justify-content-between"><a href="./productos.html" class="text-reset text-decoration-none" >Productos</a></li>
+                <li><a href="./nosotros.html" class="text-reset text-decoration-none" >Nosotros</a></li>
+                <li><a href="./faq.html" class="text-reset text-decoration-none" >FAQ</a></li>
+                <li><a href="./contacto.html" class="text-reset text-decoration-none" >Contacto</a></li>
+            </ul>
+            <ul class="col-3 list-unstyled">
+                <li class="font-weight-bold text-uppercase text-decoration-none">Seguinos</li>
+                <li class="d-flex justify-content-between">
+                    <a href="#" class="text-reset" ><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#" class="text-reset" ><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#" class="text-reset" ><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#" class="text-reset" ><i class="fa-brands fa-whatsapp"></i></a>
+                </li>
+            </ul>
+        </div>
+        <div class="text-center text-white p-3">
+        © 2022 Copyright: Libreria Pastel
         </div>
     </footer>
     <!-- JavaScript Bundle with Popper -->
