--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css">
+    <link rel="icon" type="image/jpg" href="./assets/img/stationerylogocolor.png">
     <!--Libreria de iconos-->
     <script src="https://kit.fontawesome.com/5bb549f7fb.js" crossorigin="anonymous"></script>
 </head>
@@ -117,9 +118,9 @@
             </a>
             <ul class="col-3 list-unstyled">
                 <li class="d-flex justify-content-between"><a href="./pages/productos.html" class="text-reset text-decoration-none" >Productos</a></li>
-                <li><a href="./pages/nosotros.html" class="text-reset text-decoration-none" >Nosotros</a></li>
-                <li><a href="./pages/faq.html" class="text-reset text-decoration-none" >FAQ</a></li>
-                <li><a href="./pages/contacto.html" class="text-reset text-decoration-none" >Contacto</a></li>
+                <li class="d-flex justify-content-between"><a href="./pages/nosotros.html" class="text-reset text-decoration-none" >Nosotros</a></li>
+                <li class="d-flex justify-content-between"><a href="./pages/faq.html" class="text-reset text-decoration-none" >FAQ</a></li>
+                <li class="d-flex justify-content-between"><a href="./pages/contacto.html" class="text-reset text-decoration-none" >Contacto</a></li>
             </ul>
             <ul class="col-3 list-unstyled">
                 <li class="font-weight-bold text-uppercase text-decoration-none">Seguinos</li>
