--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,6 +8,7 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/style.css">
+    <link rel="icon" type="image/jpg" href="../assets/img/stationerylogocolor.png">
     <!--Libreria de iconos-->
     <script src="https://kit.fontawesome.com/5bb549f7fb.js" crossorigin="anonymous"></script>
 </head>
@@ -64,9 +65,12 @@
                 </div>
                 <div class="mb-2">
                     <label for="ocupacion">Ocupación:</label>
-                    <input type="radio" name="ocupacion" id="docente" value="docente"> Docente
-                    <input type="radio" name="ocupacion" id="estudiante" value="estudiante"> Estudiante
-                    <input type="radio" name="ocupacion" id="otro" value="otro"> Otro
+                    <label for="ocupacion"> Docente</label>
+                    <input type="radio" name="ocupacion" id="docente" value="docente">
+                    <label for="ocupacion">Estudiante</label>
+                    <input type="radio" name="ocupacion" id="estudiante" value="estudiante">
+                    <label for="ocupacion">Otro</label> 
+                    <input type="radio" name="ocupacion" id="otro" value="otro">
                 </div>
                 <div class="mb-2">
                     <label for="mensaje">Mensaje:</label>
@@ -92,17 +96,17 @@
             </a>
             <ul class="col-3 list-unstyled">
                 <li class="d-flex justify-content-between"><a href="./productos.html" class="text-reset text-decoration-none" >Productos</a></li>
-                <li><a href="./nosotros.html" class="text-reset text-decoration-none" >Nosotros</a></li>
-                <li><a href="./faq.html" class="text-reset text-decoration-none" >FAQ</a></li>
-                <li><a href="./contacto.html" class="text-reset text-decoration-none" >Contacto</a></li>
+                <li class="d-flex justify-content-between"><a href="./nosotros.html" class="text-reset text-decoration-none" >Nosotros</a></li>
+                <li class="d-flex justify-content-between"><a href="./faq.html" class="text-reset text-decoration-none" >FAQ</a></li>
+                <li class="d-flex justify-content-between"><a href="./contacto.html" class="text-reset text-decoration-none" >Contacto</a></li>
             </ul>
             <ul class="col-3 list-unstyled">
-                <li class="font-weight-bold text-uppercase text-decoration-none">Seguinos</li>
+                <li class="font-weight-bold text-uppercase text-decoration-none text-center">Seguinos</li>
                 <li class="d-flex justify-content-between">
-                    <a href="#" class="text-reset" ><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#" class="text-reset" ><i class="fa-brands fa-twitter"></i></a>
-                    <a href="#" class="text-reset" ><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#" class="text-reset" ><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="#" class="text-reset"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#" class="text-reset"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#" class="text-reset"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#" class="text-reset"><i class="fa-brands fa-whatsapp"></i></a>
                 </li>
             </ul>
         </div>
