--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -103,10 +103,10 @@
             <ul class="col-3 list-unstyled">
                 <li class="font-weight-bold text-uppercase text-decoration-none text-center">Seguinos</li>
                 <li class="d-flex justify-content-between">
-                    <a href="#" class="text-reset"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#" class="text-reset"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="#" class="text-reset"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#" class="text-reset"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="#" class="text-reset" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#" class="text-reset" aria-label="Twitter"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#" class="text-reset" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#" class="text-reset" aria-label="Whatsapp"><i class="fa-brands fa-whatsapp"></i></a>
                 </li>
             </ul>
         </div>
