--- a/pages/productos.html
+++ b/pages/productos.html
@@ -47,7 +47,7 @@
     <main>
         <h3 class="text-center">Productos</h3>
         <div class="cards d-flex flex-wrap justify-content-around">
-        <div class="card my-2" style="width: 18rem;">
+        <div class="card my-2">
             <img src="../assets/img/plannerMensual.jpg" class="card-img-top" alt="plannerMensual">
             <div class="card-body">
             <h5 class="card-title">Planificador Mensual</h5>
@@ -55,7 +55,7 @@
             <a href="#" class="btn btn-light">Comprar</a>
             </div>
         </div>
-            <div class="card my-2" style="width: 18rem;">
+            <div class="card my-2">
                 <img src="../assets/img/SetBasicoPastel.jpg" class="card-img-top" alt="SetBasicoPastel">
                 <div class="card-body">
                 <h5 class="card-title">Kit pastel</h5>
@@ -63,7 +63,7 @@
                 <a href="#" class="btn btn-light">Comprar</a>
                 </div>
             </div>
-            <div class="card my-2" style="width: 18rem;">
+            <div class="card my-2">
                 <img src="../assets/img/comboUni.jpg" class="card-img-top" alt="combo universitario">
                 <div class="card-body">
                 <h5 class="card-title">Combo "Uni"</h5>
@@ -71,7 +71,7 @@
                 <a href="#" class="btn btn-light">Comprar</a>
                 </div>
             </div>
-            <div class="card my-2" style="width: 18rem;">
+            <div class="card my-2">
                 <img src="../assets/img/cartucheraTresCierres.jpg" class="card-img-top" alt="cartucheras">
                 <div class="card-body">
                 <h5 class="card-title">Cartucheras</h5>
@@ -79,7 +79,7 @@
                 <a href="#" class="btn btn-light">Comprar</a>
                 </div>
             </div>
-            <div class="card my-2" style="width: 18rem;">
+            <div class="card my-2">
                 <img src="../assets/img/organizadorVertical.jpg" class="card-img-top" alt="organizador Vertical">
                 <div class="card-body">
                 <h5 class="card-title">Organizador Vertical</h5>
@@ -87,7 +87,7 @@
                 <a href="#" class="btn btn-light">Comprar</a>
             </div>
         </div>
-            <div class="card my-2" style="width: 18rem;">
+            <div class="card my-2">
                 <img src="../assets/img/cuadernoscolores.jpg" class="card-img-top" alt="cuadernos de colores">
                 <div class="card-body">
                 <h5 class="card-title">Cuadernos pastel</h5>
@@ -111,10 +111,10 @@
             <ul class="col-3 list-unstyled">
                 <li class="font-weight-bold text-uppercase text-decoration-none">Seguinos</li>
                 <li class="d-flex justify-content-between">
-                    <a href="#" class="text-reset" ><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#" class="text-reset" ><i class="fa-brands fa-twitter"></i></a>
-                    <a href="#" class="text-reset" ><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#" class="text-reset" ><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="#" class="text-reset" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#" class="text-reset" aria-label="Twitter"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#" class="text-reset" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#" class="text-reset" aria-label="Whatsapp"><i class="fa-brands fa-whatsapp"></i></a>
                 </li>
             </ul>
         </div>
