--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
         <h3 class="text-center">¡NOVEDADES!</h3>
         <div class="cards d-flex flex-wrap justify-content-around">
-        <div class="card my-2" style="width: 18rem;">
+        <div class="card my-2">
             <img src="./assets/img/plannerMensual.jpg" class="card-img-top" alt="plannerMensual">
             <div class="card-body">
             <h5 class="card-title">Planificador Mensual</h5>
@@ -93,7 +93,7 @@
             <a href="#" class="btn btn-light">+ info</a>
             </div>
         </div>
-            <div class="card my-2" style="width: 18rem;">
+            <div class="card my-2">
                 <img src="./assets/img/SetBasicoPastel.jpg" class="card-img-top" alt="SetBasicoPastel">
                 <div class="card-body">
                 <h5 class="card-title">Kit pastel</h5>
@@ -101,7 +101,7 @@
                 <a href="#" class="btn btn-light">+ info</a>
                 </div>
             </div>
-            <div class="card my-2" style="width: 18rem;">
+            <div class="card my-2">
                 <img src="./assets/img/comboUni.jpg" class="card-img-top" alt="combo universitario">
                 <div class="card-body">
                 <h5 class="card-title">Combo "Uni"</h5>
@@ -125,10 +125,10 @@
             <ul class="col-3 list-unstyled">
                 <li class="font-weight-bold text-uppercase text-decoration-none">Seguinos</li>
                 <li class="d-flex justify-content-between">
-                    <a href="#" class="text-reset" ><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#" class="text-reset" ><i class="fa-brands fa-twitter"></i></a>
-                    <a href="#" class="text-reset" ><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#" class="text-reset" ><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="#" class="text-reset" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#" class="text-reset" aria-label="Twitter"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#" class="text-reset" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#" class="text-reset" aria-label="Whatsapp"><i class="fa-brands fa-whatsapp"></i></a>
                 </li>
             </ul>
         </div>
